prevent text overflow on pre tags.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+pre {
+  white-space: normal;
+}
